--- a/erscp2019/Slides-EREUSE-ERSCP-2019.html
+++ b/erscp2019/Slides-EREUSE-ERSCP-2019.html
@@ -154,21 +154,13 @@ class: center, middle, inverse
 #Circular consumption and production of electronic devices
 An approach to measuring durability, upgradeability, reusability, obsolescence and premature recycling
 
-[comment]: <> (dasd)
+[comment]: <> (Consumers use the same electronic devices for the longest time, either internally, or by collaborating with external agents so that these devices are reused and recycled properly, but recycled no prematurely, only when they can no longer be used or reused by anyone else. )
 
 .footnote[Go to [project site](https://www.ereuse.org)]
 ---
-## What is Circular Consumption of Electronic Devices?
-[comment]: <> (Consumers use the same electronic devices for the longest time, either internally, or by collaborating with external agents so that these devices are reused and recycled properly, but recycled no prematurely, only when they can no longer be used or reused by anyone else. )
-
----
 layout: false
 
-.left-column[
-  ## Agenda
-]
-.right-column[
-  ## Measures, Metrics and Indicators
+## Agenda
 ***
 - Measures: 
  - Hours of device usage  
@@ -216,9 +208,6 @@ layout: false
 - Discussion and Conclusions
 
 [comment]: <> (4234)
-
-
-]
 ---
 template: inverse
 
@@ -539,7 +528,7 @@ template: inverse
 .right-column[
 ##Circular Consumption of Devices
 ***
-###Consumers are able to use the same electronic devices for the longest time, either internally, or by collaborating with external agents so that these devices are reused and recycled properly
+###Consumers **use** the same electronic devices for the longest time, either internally, or by collaborating with external agents so that these devices are **reused** and **recycled** but not **prematurely**.
    
 >- The durability: choose the most durable.red[*] models and try to upgrade them as possible.
 >- Premature recycling: choose partners that reuse (with upgrade) and recycle only when the reusability potential is low (low value of use).
@@ -554,285 +543,47 @@ template: inverse
 ---
 .left-column[
   ## Indicators
-  ###Circular Production
+  ###Circular Production of Devices
 ]
 .right-column[
 ##Circular Production of Devices
 ***
-###Consumers are able to use the same electronic devices for the longest time, either internally, or by collaborating with external agents so that these devices are reused and recycled properly
+### Consumers are **able** to do a circular consumption, products are not obsolets, and customers are not incentivized to recycle, but not prematurely
+
    
->- The durability: choose the most durable.red[*] models and try to upgrade them as possible.
->- Premature recycling: choose partners that reuse (with upgrade) and recycle only when the reusability potential is low (low value of use).
->- Recycling: choose partners than ensure recycling, ask them for this traceability of recycling.
+>- Circular Consumption: Durability, Upgradeability and Reusability
+>- Obsolescence:  Consumers are forced to recycle them
    
 
 [comment]: <> (ccc)
 
 ]
-.footnotetext[**Note**: .red[*] For new models this approach do not let to know durability, consumers can base their election on brand durability history  ]
 
-
----
-name: how
-
-.left-column[
-  ## How does it work?
-### - Markdown
-]
-.right-column[
-A Markdown-formatted chunk of text is transformed into individual slides by JavaScript running in the browser:
-
-```remark
-# Slide 1
-This is slide 1
-
----
-
-# Slide 2
-This is slide 2
-```
-
-.slides[
-  .first[
-  ### Slide 1
-  This is slide 1
-  ]
-  .second[
-  ### Slide 2
-  This is slide 2
-  ]
-]
-
-Regular Markdown rules apply with only a single exception:
-
-  - A line containing three dashes constitutes a new slide
-  (not a horizontal rule, `&lt;hr /&gt;`)
-
-Have a look at the [Markdown website](http://daringfireball.net/projects/markdown/) if you're not familiar with Markdown formatting.
-]
----
-.left-column[
-  ## How does it work?
-  ### - Markdown
-  ### - Inside HTML
-]
-.right-column[
-A simple HTML document is needed for hosting the styles, Markdown and the generated slides themselves:
-
-```xml
-<!DOCTYPE html>
-<html>
-  <head>
-    <style type="text/css">
-      /* Slideshow styles */
-    </style>
-  </head>
-  <body>
-*    <textarea id="source">
-      <!-- Slideshow Markdown -->
-    &lt;/textarea&gt;
-*    <script src="remark.js">
-    </script>
-    <script>
-*      var slideshow = remark.create();
-    </script>
-  </body>
-</html>
-```
-
-You may download remark to have your slideshow not depend on any online resources, or reference the [latest version](http://remarkjs.com/downloads/remark-latest.min.js) online directly.
-]
 ---
 template: inverse
+## Conclusions and discussion
 
-## Of course, Markdown can only go so far.
+[comment]: <> (https://www.linkedin.com/pulse/delete-thank-you-slide-how-end-your-presentation-brian-mccarthy/)
 ---
-.left-column[
-  ## Markdown extensions
-]
-.right-column[
-To help out with slide layout and formatting, a few Markdown extensions have been included:
+## Conclusions and discussion
+[comment]: <> (ccc)
+   
 
-- Slide properties, for naming, styling and templating slides
+- 1
+- 2
+- 3
 
-- Content classes, for styling specific content
 
-- Syntax highlighting, supporting a range of languages
-]
-
----
-.left-column[
-  ## Markdown extensions
-  ### - Slide properties
-]
-.right-column[
-Initial lines containing key-value pairs are extracted as slide properties:
-
-```remark
-name: agenda
-class: middle, center
-
-# Agenda
-
-The name of this slide is {{ name }}.
-```
-
-Slide properties serve multiple purposes:
-
-* Naming and styling slides using properties `name` and `class`
-
-* Using slides as templates using properties `template` and `layout`
-
-* Expansion of `{{ property }}` expressions to property values
-
-See the [complete list](https://github.com/gnab/remark/wiki/Markdown#slide-properties) of slide properties.
-]
----
-.left-column[
-  ## Markdown extensions
-  ### - Slide properties
-  ### - Content classes
-]
-.right-column[
-Any occurences of one or more dotted CSS class names followed by square brackets are replaced with the contents of the brackets with the specified classes applied:
-
-```remark
-.footnote[.red.bold[*] Important footnote]
-```
-
-Resulting HTML extract:
-
-```xml
-<span class="footnote">
-  <span class="red bold">*</span> Important footnote
-</span>
-```
-]
----
-.left-column[
-  ## Markdown extensions
-  ### - Slide properties
-  ### - Content classes
-  ### - Syntax Highlighting
-]
-.right-column[
-Code blocks can be syntax highlighted by specifying a language from the set of [supported languages](https://github.com/gnab/remark/wiki/Configuration#highlighting).
-
-Using [GFM](http://github.github.com/github-flavored-markdown/) fenced code blocks you can easily specify highlighting language:
-
-.pull-left[
-
-<pre><code>```javascript
-function add(a, b)
-  return a + b
-end
-```</code></pre>
-]
-.pull-right[
-
-<pre><code>```ruby
-def add(a, b)
-  a + b
-end
-```</code></pre>
-]
-
-A number of highlighting [styles](https://github.com/gnab/remark/wiki/Configuration#highlighting) are available, including several well-known themes from different editors and IDEs.
-
-]
----
-.left-column[
-  ## Presenter mode
-]
-.right-column[
-To help out with giving presentations, a presenter mode comprising the
-following features is provided:
-
-- Display of slide notes for the current slide, to help you remember
-  key points
-
-- Display of upcoming slide, to let you know what's coming
-
-- Cloning of slideshow for viewing on extended display
-]
----
-.left-column[
-  ## Presenter mode
-  ### - Inline notes
-]
-.right-column[
-Just like three dashes separate slides,
-three question marks separate slide content from slide notes:
-
-```
-Slide 1 content
-
-*???
-
-Slide 1 notes
-
----
-
-Slide 2 content
-
-*???
-
-Slide 2 notes
-```
-
-Slide notes are also treated as Markdown, and will be converted in the
-same manner slide content is.
-
-Pressing __P__ will toggle presenter mode.
-]
-???
-Congratulations, you just toggled presenter mode!
-
-Now press __P__ to toggle it back off.
----
-.left-column[
-  ## Presenter mode
-  ### - Inline notes
-  ### - Cloned view
-]
-.right-column[
-Presenter mode of course makes no sense to the audience.
-
-Creating a cloned view of your slideshow lets you:
-
-- Move the cloned view to the extended display visible to the audience
-
-- Put the original slideshow in presenter mode
-
-- Navigate as usual, and the cloned view will automatically keep up with the original
-
-Pressing __C__ will open a cloned view of the current slideshow in a new
-browser window.
-]
 ---
 template: inverse
-
-## It's time to get started!
+#Circular consumption and production of electronic devices
+An approach to measuring durability, upgradeability, reusability, obsolescence and premature recycling
+   
+.footnote[Go to [project site](https://www.ereuse.org)]
 ---
-.left-column[
-  ## Getting started
-]
-.right-column[
-Getting up and running is done in only a few steps:
-
-1. Visit the [project site](http://github.com/gnab/remark)
-
-2. Follow the steps in the Getting Started section
-
-For more information on using remark, please check out the [wiki](https://github.com/gnab/remark/wiki) pages.
-]
----
-name: last-page
 template: inverse
+## Backup
 
-## That's all folks (for now)!
-
-Slideshow created using [remark](http://github.com/gnab/remark).
     </textarea>
     <script src="js/remark-latest.min.js"></script>
     <script>
