--- a/erscp2019/Slides-EREUSE-ERSCP-2019.html
+++ b/erscp2019/Slides-EREUSE-ERSCP-2019.html
@@ -159,16 +159,19 @@ An approach to measuring durability, upgradeability, reusability, obsolescence a
 .footnote[Go to [project site](https://www.ereuse.org)]
 ---
 layout: false
-
-## Agenda
-***
-- Measures: 
-- Metrics:   
-- Indicators
-- Discussion
-- Conclusions
+.left-column[
+# Agenda
+]
+.right-column[
+<img src="./imgs/space-transparent-10x10.png" alt="drawing" width="100" height="5" style="padding-left: 0px; padding-bottom: 0px;padding-top: 0px;padding-right: 0px"/>
+- ##Measures
+- ##Metrics
+- ##Indicators
+- ##Discussion
+- ##Conclusions
 
 [comment]: <> (4234)
+]
 ---
 template: inverse
 
