--- a/erscp2019/Slides-EREUSE-ERSCP-2019.html
+++ b/erscp2019/Slides-EREUSE-ERSCP-2019.html
@@ -509,21 +509,21 @@ I am prematurely recycling 90% of my laptop.
 ***
 ###Indicates the dificulty of using a device which, even having good performance, is in low utilization.
    
->**O: Obsolescence of a model M**    
->O(M) = The maximum difference between the low.red[*] _usage rate_ threshold and the top _usage rate_ with same Performance
+>**O(M): Obsolescence.red[*] of a model M**    
+>O(M) = The difference between your model's recycling rate and the recycling rate of another model with similar _performance_
    
 
 ```remark
 I have to discard my laptop model X with _performance_ 3, it 
-has a _usage rate_ of 30%, instead, users of the Y model with 
-the same _performance_ has a *usage rate* by 80%. 
+has a _recycling rate_ of 80%, instead, users of the Y model with 
+the same _performance_ has a _recycling rate_ by 30%. 
 The obsolescence of my X model is at least of 50% (80%-30%).
 ```
     
 [comment]: <> (ccc)
 
 ]
-.footnotetext[**Note**: .red[*] We define a low _usage rate_ threshold as around 30%. A model should become obsolete because its performance is low and not for other reasons; if in a model we find a set of devices that still have performance to be in use, but are discarded, it means that there is some kind of obsolescence that is not a function of the performance of the model. For example: impossibility to upgrade it, repair it, use it with other software, etc ...]
+.footnotetext[**Note**: .red[*] We define the recycling rate threshold around 30%. A model should become obsolete because its performance is low and not for other reasons; if in a model we find a set of devices that still have performance to be in use, but are discarded, it means that there is some kind of obsolescence that is not a function of the performance of the model. For example: impossibility to upgrade it, repair it, use it with other software, etc ...]
 
 ---
 template: inverse
