--- a/erscp2019/Slides-EREUSE-ERSCP-2019.html
+++ b/erscp2019/Slides-EREUSE-ERSCP-2019.html
@@ -523,7 +523,7 @@ The obsolescence of my X model is at least of 50% (80%-30%).
 [comment]: <> (ccc)
 
 ]
-.footnotetext[**Note**: .red[*] We define the recycling rate threshold around 30%. A model should become obsolete because its performance is low and not for other reasons; if in a model we find a set of devices that still have performance to be in use, but are discarded, it means that there is some kind of obsolescence that is not a function of the performance of the model. For example: impossibility to upgrade it, repair it, use it with other software, etc ...]
+.footnotetext[**Note**: .red[*] A model should become obsolete because its performance is low and not for other reasons; that means there is some kind of obsolescence that not depends on performance of the model but factors such as impossibility to upgrade it, repair it, use it with other software, etc ...]
 
 ---
 template: inverse
