--- a/erscp2019/Slides-EREUSE-ERSCP-2019.html
+++ b/erscp2019/Slides-EREUSE-ERSCP-2019.html
@@ -418,16 +418,15 @@ template: inverse
 
 ##Reusability
 ***
-###Indicates how reusable a device is
+###Indicates how reusable a device is based in the remaining useful life
 >**R: Reusability per device**   
->R(D) = % devices of the model in use with similar performance
+>R(D) = % devices of the model still in use with similar performance
 
 
 ```remark
 Before getting rid of my laptop Dell Latitude model E6440 
 with performance 3. I check that there are 70% of these
-still in operation.  I can safely say that it is 70% 
-reusable.
+still in use.  I can safely say that it is 70% reusable.
 ```
 
 [comment]: <> (ccc)
@@ -515,8 +514,8 @@ I am prematurely recycling 90% of my laptop.
 
 ```remark
 I have to discard my laptop model X with _performance_ 3, it 
-has a _recycling rate_ of 80%, instead, users of the Y model with 
-the same _performance_ has a _recycling rate_ by 30%. 
+has a _recycling rate_ of 80%, instead, users of the Y model
+with the same _performance_ has a _recycling rate_ by 30%. 
 The obsolescence of my X model is at least of 50% (80%-30%).
 ```
     
@@ -536,11 +535,11 @@ template: inverse
 .right-column[
 ##Circular Consumption of Devices
 ***
-###Consumers **use** the same electronic devices for the longest time, either internally, or by collaborating with external agents so that these devices are **reused** and **recycled** but not **prematurely**.
+###Consumers **use** the same electronic devices for the longest time, either internally, or by collaborating with external agents so these devices are **reused** and **recycled** but not **prematurely**.
    
->- The durability: choose the most durable.red[*] models and try to upgrade them as possible.
->- Premature recycling: choose partners that reuse (with upgrade) and recycle only when the reusability potential is low (low performance).
->- Recycling: choose partners than ensure recycling, ask them for this traceability of recycling.
+>- Durability: choose the most durable.red[*] models and try to upgrade them as possible.
+>- Premature recycling: choose partners that reuse your discarted devices and recycle them only at the end of their useful life (the _reusability potential_ is low. Ask them for the device performance at the moment of recycling.
+>- Recycling: choose partners than ensure recycling, ask them for the proof of recycling.
    
 
 [comment]: <> (ccc)
@@ -556,11 +555,11 @@ template: inverse
 .right-column[
 ##Circular Production of Devices
 ***
-### Consumers are **able** to do a circular consumption, products are not obsolets, and customers are not incentivized to recycle, but not prematurely
+### Consumers are **able** to do a circular consumption because products do not quickly become obsolete, and customers are incentivized to recycle, but not prematurely.
 
    
->- Circular Consumption: Durability, Upgradeability and Reusability
->- Obsolescence:  Consumers are forced to recycle them
+>- Circular Consumption: Durability, upgradeability, reusability and recycling but not prematurely
+>- Obsolescence:  Consumers are not obliged to recycle for reasons other than low _performance_
    
 
 [comment]: <> (ccc)
