Update chart measures, summary, conclusions

--- a/erscp2019/Slides-EREUSE-ERSCP-2019.html
+++ b/erscp2019/Slides-EREUSE-ERSCP-2019.html
@@ -9,7 +9,6 @@
       @import url("./css/Droid-Serif.css");
       @import url("./css/Yanone-Kaffeesatz.css");
       @import url("./css/Ubuntu-Mono.css");
-
       body {
         font-family: 'Droid Serif';
       }
@@ -144,6 +143,7 @@
         /*padding-top: 1em;*/
       }
     </style>
+
   </head>
   <body>
     <textarea id="source">
@@ -151,8 +151,7 @@ name: inverse
 layout: true
 class: center, middle, inverse
 ---
-#Circular consumption and production of electronic devices
-An approach to measuring durability, upgradeability, reusability, obsolescence and premature recycling
+#An approach to measuring durability, upgradeability, reusability, obsolescence and premature recycling
 
 [comment]: <> (Consumers use the same electronic devices for the longest time, either internally, or by collaborating with external agents so that these devices are reused and recycled properly, but recycled no prematurely, only when they can no longer be used or reused by anyone else. )
 
@@ -173,6 +172,12 @@ layout: false
 [comment]: <> (4234)
 ]
 ---
+## Circular consumption of digital devices
+### Reuse and recycling non prematurely
+<img src="./imgs/use-reuse-recycle-loops.png" alt="drawing" width="800" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 50px;padding-right: 60px"/>
+
+---
+
 template: inverse
 
 ## Measures
@@ -180,10 +185,10 @@ template: inverse
 layout: false
 .left-column[
   ## Measures
-  ###U: Usage hours per device and model
+  ###U: Usage hours per device
 ]
 .right-column[
-<img src="./imgs/calendar.jpeg" alt="drawing" width="80" align="right" style="padding-left: 0px; padding-bottom: 0px;padding-top: 0px;padding-right: 0px"/>
+<img src="./imgs/clock.svg" alt="drawing" width="50" align="right" style="padding-left: 0px; padding-bottom: 0px;padding-top: 0px;padding-right: 0px"/>
 ##Usage hours per device
 ***
 ###A measure that indicates the number of hours that a particular device has been in usage.
@@ -194,15 +199,15 @@ layout: false
    
 
 
-<img src="./imgs/harddrive.jpg" alt="drawing" width="205" align="middle"  style="padding-left: 0px; padding-bottom: 0px;padding-right: 0px;padding-top: 30px;"/>
+<img src="./imgs/harddrive.jpg" alt="drawing" width="250" align="middle"  style="padding-left: 100px; padding-bottom: 0px;padding-right: 0px;padding-top: 10px;"/>
 ]
 ---
 .left-column[
   ## Measures
-  ###U: Usage hours per device and model
+  ###U: Usage hours per device
 ]
 .right-column[
-<img src="./imgs/calendar.jpeg" alt="drawing" width="80" align="right" style="padding-left: 0px; padding-bottom: 0px;padding-top: 0px;padding-right: 0px"/>
+<img src="./imgs/clock.svg" alt="drawing" width="50" align="right" style="padding-left: 0px; padding-bottom: 0px;padding-top: 0px;padding-right: 0px"/>
 ##Usage hours per device
 ***
 > **U: Usage hours per device D**    
@@ -225,7 +230,7 @@ layout: false
 ]
 .right-column[
 <img src="./imgs/valueofuse.png" alt="drawing" width="150" align="right" style="padding-left: 0px; padding-bottom: 0px;padding-top: 10px;padding-right: 0px"/>
-  ##Performance per device and model
+  ##Performance per device
 ***
   ###A measure (evaluative) that score of the performance .red[*] of a device.
 > Aggregates in a single value the measures for all its components (disc, memory, processor, etc...). The resulting value ranges from 0 to 5, never reaching 5. 
@@ -248,6 +253,7 @@ layout: false
 
 ]
 .right-column[
+<img src="./imgs/usage.png" alt="drawing" width="50" align="right" style="padding-left: 0px; padding-bottom: 0px;padding-top: 0px;padding-right: 0px"/>
 ##Devices in use per model
 ***
 ###Indicates the number of devices the system knows are in use
@@ -266,6 +272,7 @@ layout: false
   ###Devices recycled per model
 ]
 .right-column[
+<img src="./imgs/recycling.jpg" alt="drawing" width="50" align="right" style="padding-left: 0px; padding-bottom: 0px;padding-top: 5px;padding-right: 3px"/>
 ##Devices recycled per model
 ***
 ###Indicates the number of devices the system knows or assumes are recycled
@@ -526,22 +533,25 @@ The obsolescence of my X model is at least of 50% (80%-30%).
 
 ---
 template: inverse
-## Indicators
+## Conclusions
+---
+## Conclusions
+###Measures and metrics
+<img src="./imgs/measures-metrics-chart.png" alt="drawing" width="650" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 20px;padding-right: 50px"/>
 ---
 .left-column[
-  ## Indicators
+  ## Conclusions
+  ###Measures and metrics
   ###Circular Consumption
 ]
 .right-column[
-##Circular Consumption of Devices
+##Circular Consumption and Production of Devices
 ***
-###Consumers **use** the same electronic devices for the longest time, either internally, or by collaborating with external agents so these devices are **reused** and **recycled** but not **prematurely**.
+###Consumers are able to use the same electronic devices for the longest time, either internally, or by collaborating with external agents so these devices are **reused** and **recycled** but not **prematurely**.
    
->- Durability: choose the most durable.red[*] models and try to upgrade them as possible.
->- Premature recycling: choose partners that reuse your discarted devices and recycle them only at the end of their useful life (the _reusability potential_ is low. Ask them for the device performance at the moment of recycling.
->- Recycling: choose partners than ensure recycling, ask them for the proof of recycling.
-   
-
+>- Durability: choose the most durable.red[*] and try to upgrade them as possible.
+>- Reusability Potential: choose partners that reuse your discarted devices and recycle them only when there are no Reusability Potential. Ask them for the device performance at the moment of recycling.
+>- Obsolescence: choose devices that can run with standard software and components.
 [comment]: <> (ccc)
 
 ]
@@ -549,79 +559,46 @@ template: inverse
 
 ---
 .left-column[
-  ## Indicators
-  ###Circular Production of Devices
+  ## Conclusions
+  ###Measures and metrics
+  ###Circular Consumption
+  ###Summary
 ]
 .right-column[
-##Circular Production of Devices
-***
-### Consumers are **able** to do a circular consumption because products do not quickly become obsolete, and customers are incentivized to recycle, but not prematurely.
 
-   
->- Circular Consumption: Durability, upgradeability, reusability and recycling but not prematurely
->- Obsolescence:  Consumers are not obliged to recycle for reasons other than low _performance_
-   
-
-[comment]: <> (ccc)
-
-]
-
----
-template: inverse
-## Conclusions and discussion
-
-[comment]: <> (https://www.linkedin.com/pulse/delete-thank-you-slide-how-end-your-presentation-brian-mccarthy/)
----
-## Conclusions and discussion
-
- 1. Approach:  Focuse on usage phase and _performance_ when recycling to measure circularity of consumption and products.  
-
- 2.
-
-four measures, software instruments, metrics and indicators for measure circularity of consumers and products
+##Summary
+ 1. Focus on durability, _performance_ of devices, and devices in use and recycled
+ 2. Get durability from hard drives when these are erased
+ 3. Get device performance when these are upgraded, discarted and recycled
+ 4. Validated metrics with 3000 devices: Usage hours per device, durability, utilization, upgradeability. 
+ 5. Not validated metrics because of lack of devices in use and recycled measures: reusability,obsolescence by model and premature recycling.
    
 [comment]: <> (Our approach to measuring circularity in the consumption and production of electronic devices is to focus on the performance achieved in their use phase.  Performing these measurements at certain times of their usage cycle and with their respective instruments we define the metrics proposed to measure the circularity of consumers and products.)
    
- 2. Measures: Is it realistic and feasible to collect hours of use? performance? usage and recycling rates?
-   
 [comment]: <> ( We have four measures: the 1. usage hours, 2. performance, 3. usage rate, 4. recycling rate. In order to know the durability of the device in all its usage phases it is necessary to analyse all the hard drives it has had. The necessary instrument to collect the measurement of usage hours is a software that analyses the variables in the hard drive. In order to know the durability of the device throughout its usage phase, it is necessary to analyse all the hard drives it had. We propose that each time the data is wiped from the drive, either because there is a drive replacement or because it is reused by another user, the data erasure software employed notifies the serial number of the device, of the hard drive and the usage hours. Aggregating this information would allow to have all the hours of its usage cycles. When a hard disk is discarded, data is usually erased. We propose that it is just at the time of data erasure when data is reported: serial number of the hard disk, the serial number of the device and the hours made by the hard disk. Is it a trusted and irreversible data repository (a blockchain) the place where to store this information in order to be able to analyse it and know the total durability? DECIR QUE TENEMOS EL USAGE AND RECYCLING RATES PARA UN SUBCONJUNTO )
    
- 3. Metrics validated with 3000 devices in first usage cycle (not in reuse): Usage hours per device, durability, utilization, upgradeability. Not validated: reusability, potential, obsolescence by model and premature recycling.
    
 [comment]: <> (The study carried out with more than 3,000 devices has allowed us to validate the metrics of: first cycle hours of use of the device, total hours of use of the device, durability of the model in hours of use, performance of the device in hours of use, maximum performance of the model and current upgradeability of the device. As there we do not have all information about model usage and recyling rates, , it has not been possible to validate the metrics of current reusability, potential, obsolescence by model and premature recycling.)
    
- 4. Consumers base their election on brand durability history. Can this have an impact?
-
+]
 ---
-layout: false
+.left-column[
+  ## Conclusions
+  ###Measures and metrics
+  ###Circular Consumption
+  ###Summary
+  ###Discussion and next steps
 
-## Conclusiones : Hacer tabla, en filas los indicadores, en columnas las medidas. Indicar donde se usa cada una.
-***
-- Measures: 
- - Usage hours per device  
- - Performance per device
- - Devices in use per model  
- - Devices recyled per model  
-- Metrics:   
- - Usage rate per model   
- - Recycling rate per model
- - Durability per device and model
- - Utilization per device and model
- - Upgradeability per device and model
- - Reusability per device and model
- - Reusability potential per device and model
- - Premature recycling per device and model
- - Obsolescence per device and model
-- Indicators
- - Circular Consumption
- - Circular Production
-- Discussion and Conclusions
-
-[comment]: <> (4234)
+]
+.right-column[
+##Discussion and next steps
+ 1. For new models this approach do not let to know durability but consumers can base their election on brand durability history
+ 2. Consumers base their election on brand durability history. Can this have an impact?
+ 4. Use smart contracts to get acknowledge of use and recycling in exchange of economic incentives and low-cost devices
+]
 ---
 template: inverse
-#Circular consumption and production of electronic devices
-An approach to measuring durability, upgradeability, reusability, obsolescence and premature recycling
+#An approach to measuring durability, upgradeability, reusability, obsolescence and premature recycling
    
 .footnote[Go to [project site](https://www.ereuse.org)]
 ---
