--- a/erscp2019/Slides-EREUSE-ERSCP-2019.html
+++ b/erscp2019/Slides-EREUSE-ERSCP-2019.html
@@ -151,7 +151,8 @@ name: inverse
 layout: true
 class: center, middle, inverse
 ---
-#An approach to measuring durability, upgradeability, reusability, obsolescence and premature recycling
+##An approach to measuring durability, upgradeability, reusability, obsolescence and premature recycling
+###Circular Consumption and Production of Devices
 
 [comment]: <> (Consumers use the same electronic devices for the longest time, either internally, or by collaborating with external agents so that these devices are reused and recycled properly, but recycled no prematurely, only when they can no longer be used or reused by anyone else. )
 
@@ -160,9 +161,11 @@ class: center, middle, inverse
 layout: false
 .left-column[
 # Agenda
+***
 ]
 .right-column[
-<img src="./imgs/space-transparent-10x10.png" alt="drawing" width="100" height="5" style="padding-left: 0px; padding-bottom: 0px;padding-top: 0px;padding-right: 0px"/>
+<img src="./imgs/space-transparent-10x10.png" alt="drawing" width="100" height="20" style="padding-left: 0px; padding-bottom: 0px;padding-top: 46px;padding-right: 0px"/>
+- ##Introduction
 - ##Measures
 - ##Metrics
 - ##Indicators
@@ -172,9 +175,8 @@ layout: false
 [comment]: <> (4234)
 ]
 ---
-## Circular consumption of digital devices
-### Reuse and recycling non prematurely
-<img src="./imgs/use-reuse-recycle-loops.png" alt="drawing" width="800" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 50px;padding-right: 60px"/>
+## Reuse and recycling non prematurely digital devices
+<img src="./imgs/use-reuse-recycle-loops.png" alt="drawing" width="800" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 50px;padding-right: 70px"/>
 
 ---
 
@@ -533,10 +535,9 @@ The obsolescence of my X model is at least of 50% (80%-30%).
 
 ---
 template: inverse
-## Conclusions
+## Conclusions and discussion
 ---
-## Conclusions
-###Measures and metrics
+##Measures and metrics
 <img src="./imgs/measures-metrics-chart.png" alt="drawing" width="650" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 20px;padding-right: 50px"/>
 ---
 .left-column[
@@ -587,19 +588,22 @@ template: inverse
   ###Measures and metrics
   ###Circular Consumption
   ###Summary
-  ###Discussion and next steps
+  ###Discussion
 
 ]
 .right-column[
-##Discussion and next steps
+##Discussion
  1. For new models this approach do not let to know durability but consumers can base their election on brand durability history
  2. Consumers base their election on brand durability history. Can this have an impact?
  4. Use smart contracts to get acknowledge of use and recycling in exchange of economic incentives and low-cost devices
 ]
 ---
 template: inverse
-#An approach to measuring durability, upgradeability, reusability, obsolescence and premature recycling
-   
+##An approach to measuring durability, upgradeability, reusability, obsolescence and premature recycling
+###Circular Consumption and Production of Devices
+
+[comment]: <> (Consumers use the same electronic devices for the longest time, either internally, or by collaborating with external agents so that these devices are reused and recycled properly, but recycled no prematurely, only when they can no longer be used or reused by anyone else. )
+
 .footnote[Go to [project site](https://www.ereuse.org)]
 ---
 template: inverse
