--- a/erscp2019/slides.html
+++ b/erscp2019/slides.html
@@ -533,8 +533,8 @@ model is at least of 50% (80%-30%).
 
 
 ---
-#Summary of measures and metrics
-<img src="./imgs/measures-metrics-chart.png" alt="drawing" width="700" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 20px;padding-right: 50px"/>
+##Summary of measures and metrics
+<img src="./imgs/measures-metrics-chart.png" alt="drawing" height="500" width="750" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 10px;padding-right: 50px"/>
 ---
 #Data and analysis
 ### 1. Data collection: Usage hours and performance measures are collected when hard drives are erased by reuse centers (20)
