--- a/erscp2019/slides.html
+++ b/erscp2019/slides.html
@@ -336,7 +336,6 @@ template: inverse
 .first[
 
 |Model|Man.|Device Usage| Model Durability|Device Utilization|
-| :-----: | :--- :| :-----------------: | :----------------------: | :----------------------: |
 |Veriton M400|Acer|65,332 h.| 30,043 h.   |217%|
 |HP Compaq 6005 Pro|Hp| 64,228  h. | 44,198 h.|145% |
 ]
@@ -538,7 +537,7 @@ model is at least of 50% (80%-30%).
 <img src="./imgs/measures-metrics-chart.png" alt="drawing" height="500" width="750" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 10px;padding-right: 50px"/>
 ---
 #Data and analysis
-### 1. Data collection: Usage hours and performance measures are collected when hard drives are erased or devices are upgradesd by reuse centers (20)
+### 1. Data collection: Usage hours and performance measures are collected when hard drives are erased or devices are upgraded by reuse centers (20)
 ### 2. Data set: A total of 3,045 observations (devices) during 3 years, 281 models of desktops and laptops
 ### 3. Data filtering: We selected only those models for which we have at least 10 observations: 2,460 observations 
 ### 4. Metrics validation: Durability, utilization and upgradeability has been validated.
