--- a/erscp2019/slides.html
+++ b/erscp2019/slides.html
@@ -521,10 +521,10 @@ of my laptop.
    
 
 ```remark
-I have to discard my laptop model X with _performance_ 3, 
-it has a _recycling rate_ of 80%, instead, users of the 
-Y model with the same _performance_ has a 
-_recycling rate_ by 30%.  The obsolescence of my X 
+I have to discard my laptop model X with performance 3, 
+it has a recycling rate of 80%, instead, users of the 
+Y model with the same performance has a 
+recycling rate by 30%.  The obsolescence of my X 
 model is at least of 50% (80%-30%).
 ```
     
