--- a/ledger-milazzo/slides.html
+++ b/ledger-milazzo/slides.html
@@ -212,7 +212,7 @@ layout: false
 ##Repair: Valentino
 ***
 ###A repair shop in Milazzo but only mobiles
-> If the owner doesn't want to pay for the repair the mobile phone remains in a drawer
+> If the owner does not want to pay for the repair then the phone remains in a drawer
 
 <img src="./imgs/imgs-milazzo/20191104_170521-red.jpg" alt="drawing" width="500" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 45px;padding-right: 70px"/>
 
@@ -229,7 +229,7 @@ layout: false
 ## Scrap: Fiorello
 ***
 ###A scrap center in Milazzo 
-> He's got a lot of cell phones!!, make him an offer.
+> He's got a lot of cell phones
 
 <img src="./imgs/imgs-milazzo/20191106_103729-red.jpg" alt="drawing" width="500" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 45px;padding-right: 70px"/>
 
@@ -291,16 +291,6 @@ layout: false
 
 ]
 ---
-template: inverse
-## Opportunity Analysis
----
-layout:false
-## Oportunities for refurbishment
-<img src="./imgs/imgs-milazzo/stakeholdermapping-red.jpg" alt="drawing" width="800" height="500" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 5px;padding-right: 20px"/>
----
-template: inverse
-## Action
----
 layout:false
 ## A refurbish center in Istituto Majorana
 * Students want to learn how to repair their mobiles and laptops
@@ -313,10 +303,16 @@ layout:false
 ## R.E.D: Recycling Electronic Devices
 ### School Project Make Easier Circular Economy
 
-
 <img src="./imgs/imgs-milazzo/20191105_110335-red.jpg" alt="drawing" width="600" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 5px;padding-right: 20px"/>
 
+---
 
+template: inverse
+## Opportunity Analysis
+---
+layout:false
+## Summary of oportunities for refurbishment
+<img src="./imgs/imgs-milazzo/stakeholdermapping-red.jpg" alt="drawing" width="800" height="500" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 5px;padding-right: 20px"/>
 ---
 template: inverse
 ##Future
