--- a/ledger-milazzo/slides.html
+++ b/ledger-milazzo/slides.html
@@ -291,20 +291,44 @@ layout: false
 
 ]
 ---
-layout:false
+layout: false
+.left-column[
+  ## Actors
+  ### Valentino
+  ### Fiorello
+  ### Katia
+  ### Antonio
+  ### Francesco
+  ### Rocco
+]
+.right-column[
+
 ## A refurbish center in Istituto Majorana
+***
 * Students want to learn how to repair their mobiles and laptops
 * Receive training in electronics, mechanics, telecommunications and information technology 
 
-<img src="./imgs/imgs-milazzo/20191105_115151-red.jpg" alt="drawing" width="800" height="400" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 5px;padding-right: 20px"/>
+<img src="./imgs/imgs-milazzo/20191105_115151-red.jpg" alt="drawing" width="500" align="middle" style="padding-left: 20px; padding-bottom: 20px;padding-top: 5px;padding-right: 0px"/>
+]
 ---
-layout:false
+layout: false
+.left-column[
+  ## Actors
+  ### Valentino
+  ### Fiorello
+  ### Katia
+  ### Antonio
+  ### Francesco
+  ### Rocco
+  ### Francesco +6
+]
+.right-column[
 <img src="./imgs/imgs-milazzo/logo-red.png" alt="drawing" width="300" align="right" style="padding-left: 0px; padding-bottom: 20px;padding-top: 5px;padding-right: 20px"/>
 ## R.E.D: Recycling Electronic Devices
 ### School Project Make Easier Circular Economy
 
-<img src="./imgs/imgs-milazzo/20191105_110335-red.jpg" alt="drawing" width="600" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 5px;padding-right: 20px"/>
-
+<img src="./imgs/imgs-milazzo/20191105_110335-red.jpg" alt="drawing" width="500" align="middle" style="padding-left: 20px; padding-bottom: 20px;padding-top: 5px;padding-right: 20px"/>
+]
 ---
 
 template: inverse
