--- a/ledger-milazzo/slides.html
+++ b/ledger-milazzo/slides.html
@@ -335,7 +335,7 @@ template: inverse
 ## Opportunity Analysis
 ---
 layout:false
-## Summary of oportunities for refurbishment
+## Summary of oportunities and actor mapping
 <img src="./imgs/imgs-milazzo/stakeholdermapping-red.jpg" alt="drawing" width="800" height="500" align="middle" style="padding-left: 0px; padding-bottom: 20px;padding-top: 5px;padding-right: 20px"/>
 ---
 template: inverse
